<resources>
    <string name="app_name">Boats</string>
    <string name="uploadImage">Upload Image</string>
    <string name="analyze_image">Image to Analyze</string>
    <string name="changeImage">Change Image</string>
    <string name="finish">Finish Analysis</string>
    <string name="catchAnalysis">Catch Analysis</string>
    <string name="set">Set</string>
    <string name="dotCreate">Create a Dot</string>
    <string name="setBlue">Set Blue</string>
    <string name="setRed">Set Red</string>
    <string name="setGreen">Set Green</string>
    <string name="setYellow">Set Yellow</string>
    <string name="prompt">Drag each circle to it\'s respective location on the body and secure. (Set Yellow last)</string>
    <string name="drawLines">Draw Lines</string>
    <string name="analysisBegin">Start Analysis</string>
    <string name="shin">Shins are vertical</string>
    <string name="antiShin">Shins aren\'t vertical :/</string>
    <string name="goodlayback">Good layback</string>
    <string name="notgoodLayback">Not enough layback</string>
    <string name="toofarr">Too much layback</string>
    <string name="notenoughComprss">Not enough compression/reach at the catch</string>
    <string name="toocompress">Too much compression</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="zoomIn">Zoom In</string>
    <string name="zoomOut">Zoom Out</string>
    <string name="save">Save</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="flip">Flip</string>
    <string name="camera">Camera</string>
    <string name="close">Close</string>
    <string name="imageWebsite">Open Image from Url</string>
    <string name="edit">Edit Photo</string>
    <string name="title_activity_edit_image">EditImage</string>
    <string name="compress">Good compression/reach at the catch</string>
    <string name="logo">logoo</string>
    <string name="advice">advice</string>
    <string name="feedback">feedback</string>
    <string name="restart">Restart</string>
</resources>
