<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/shiftLeft"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="595dp"
        android:layout_marginBottom="27dp"
        android:contentDescription="@string/left"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/shiftDown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left" />

    <ImageButton
        android:id="@+id/shiftDown"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/down"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/shiftRight"
        app:layout_constraintStart_toEndOf="@+id/shiftLeft"
        app:layout_constraintTop_toBottomOf="@+id/shiftUp"
        app:srcCompat="@drawable/down" />

    <ImageButton
        android:id="@+id/shiftUp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="573dp"
        android:contentDescription="@string/up"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/shiftDown"
        app:layout_constraintEnd_toStartOf="@+id/shiftRight"
        app:layout_constraintStart_toEndOf="@+id/shiftLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/up" />

    <ImageButton
        android:id="@+id/shiftRight"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="595dp"
        android:layout_marginEnd="261dp"
        android:layout_marginBottom="27dp"
        android:contentDescription="@string/right"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/shiftLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/right" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="445dp"
            android:layout_height="43dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">


            <ImageButton
                android:id="@+id/zoomIn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/zoomIn"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/zoomOut"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/notZoomOut" />

            <ImageButton
                android:id="@+id/zoomOut"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/zoomOut"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/takePhoto"
                app:layout_constraintStart_toEndOf="@+id/zoomIn"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/zoomOut" />

            <ImageButton
                android:id="@+id/takePhoto"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/camera"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/openFile"
                app:layout_constraintStart_toEndOf="@+id/zoomOut"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/camera" />

            <ImageButton
                android:id="@+id/openFile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/uploadPhoto"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/downloadFile"
                app:layout_constraintStart_toEndOf="@+id/takePhoto"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/photo" />

            <ImageButton
                android:id="@+id/downloadFile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/imageWebsite"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/flipHorizontal"
                app:layout_constraintStart_toEndOf="@+id/openFile"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/website" />

            <ImageButton
                android:id="@+id/flipHorizontal"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/flip"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/downloadFile"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.285"
                app:srcCompat="@drawable/flipHoriz" />

            <ImageButton
                android:id="@+id/save"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/save"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/flipHorizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/save" />

            <ImageButton
                android:id="@+id/clearBackground"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/close"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/save"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.571"
                app:srcCompat="@drawable/closer" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>